update admin page fixes (dark mode)

--- a/public/styles/admin-panel.css
+++ b/public/styles/admin-panel.css
@@ -518,6 +518,20 @@ button:hover {
     border-radius: 30px;
     overflow: hidden;
     cursor: pointer;
+}
+
+.dark-mode .InputContainer {
+
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to bottom, rgb(121, 127, 128), rgba(27, 17, 17, 0.726));
+    border-radius: 30px;
+    overflow: hidden;
+    cursor: pointer;
+
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -567,4 +581,20 @@ button:hover {
     opacity: 1;
     top: 0;
     /* Move to on-screen position */
+}
+
+.modal-content {
+    background-color: #cacaca;
+    margin: auto;
+    width: 50%;
+    border-radius: 30px;
+}
+
+
+
+.dark-mode .modal-content {
+    background-color: #333;
+    width: 50%;
+    align-self: center;
+    border-radius: 30px;
 }
